# automationBeamNgExportFix

./: README.md  pyproject.toml  setup.py
automationBeamNgExportFix/: __main__.py  exportFix.py  get_files.py
